<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="search_menu">Search</string>
    <string name="search_no_results">No Results</string>
    <string name="restart_Kiosk_pref_title">Restart</string>
    <string name="developer_options_title">Developer Options</string>
    <string name="change_default_home">Set as Home App</string>
    <string name="theme_dark_theme_mode_on">Enabled</string>
    <string name="theme_dark_theme_mode_off">Disabled</string>
    <string name="pref_icon_packs">Icon Packs</string>
    <string name="icon_pack_default">System Icons</string>
    <string name="pref_icon_pack_masking">Icon Masking</string>
    <string name="pref_icon_pack_masking_summary">Match unthemed icons to Icon Pack.</string>
    <string name="pref_legacy_treatment_title">Create Adaptive Icons</string>
    <string name="pref_legacy_treatment_summary">Create Adaptive Icons for all shortcuts.</string>
    <string name="pref_legacy_colored_backgrounds">Color Backgrounds</string>
    <string name="pref_legacy_colored_backgrounds_summary">Color generated Adaptive Icons’ backgrounds.</string>
    <string name="pref_white_only_treatment">Replace White Backgrounds</string>
    <string name="pref_white_only_treatment_summary">Color all Adaptive Icons’ backgrounds.</string>
    <string name="adaptify_pack_title">Create Adaptive Icons for Icon Pack</string>
    <string name="icon_shape_override_label">Icon Shape</string>
    <string name="reset_custom_icons">Remove Custom Icons</string>
    <string name="reset_custom_icons_confirmation">Revert to default icons from this Icon Pack? This can’t be undone.</string>
    <string name="appearance">Appearance</string>
    <string name="theme_auto">Automatic (Matches Wallpaper)</string>
    <string name="theme_auto_night_mode">Set by System</string>
    <string name="theme_dark_theme_mode_follow_daylight">Scheduled (Dark at Night)</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark_text">Light w/ Dark Text</string>
    <string name="theme_with_dark_text">Dark Text</string>
    <string name="theme_use_black">Use Pure Black</string>
    <string name="theme_use_dark_text">Use Dark Text</string>
    <string name="Kiosk_accent">Accent Color</string>
    <string name="color_pixel_accent">Google Blue</string>
    <string name="color_system_accent">Set by System</string>
    <string name="color_wallpaper_main">Wallpaper — Primary</string>
    <string name="color_wallpaper_secondary">Wallpaper — Secondary</string>
    <string name="color_wallpaper_tertiary">Wallpaper — Tertiary</string>
    <string name="pref_fonts_title">Fonts</string>
    <string name="blur_pref_title">Blur</string>
    <string name="blur_pref_summary">Blur page backgrounds.</string>
    <string name="blur_radius_pref_title">Blur Intensity</string>
    <string name="grid_size">Grid Size</string>
    <string name="grid_size_width">Width</string>
    <string name="grid_size_height">Height</string>
    <string name="overlap_placement">Allow Overlaps</string>
    <string name="lock_desktop">Lock Desktop</string>
    <string name="pref_category_icons">Shortcuts</string>
    <string name="hide_icon_labels_pref_title">Hide Labels</string>
    <string name="pref_mutliline_labels">Multiline Labels</string>
    <string name="icon_text_scale_pref_title">Text Size</string>
    <string name="icon_scale_pref_title">Icon Size</string>
    <string name="pref_icon_popup_menu">Shortcut Bubble</string>
    <string name="pref_category_misc">Other</string>
    <string name="animation_type_title">App Launch Transition</string>
    <string name="animation_type_default">Default</string>
    <string name="animation_type_pie">Android Pie</string>
    <string name="animation_type_pie_like">Android Pie (Emulated)</string>
    <string name="animation_type_reveal">Reveal</string>
    <string name="animation_type_slide_up">Slide Up</string>
    <string name="animation_type_scale_up">Scale Up</string>
    <string name="animation_type_blink">Blink</string>
    <string name="animation_type_fade">Fade</string>
    <string name="icon_badging_title">Notification Dots</string>
    <string name="pref_notification_count_title">Show Notification Count</string>
    <string name="allow_rotation_title">Enable Rotation</string>
    <string name="pref_center_wallpaper">Center Wallpaper</string>
    <string name="pref_center_wallpaper_summary">Disable wallpaper scrolling.</string>
    <string name="pref_hide_statusbar">Hide Status Bar</string>
    <string name="full_width_width_widgets_pref_title">Wide Widgets</string>
    <string name="full_width_widgets_pref_summary">Let widgets stretch to the screen’s edges.</string>
    <string name="show_top_shadow_pref_title">Show Top Shadow</string>
    <string name="pref_smartspace_widget_provider">Weather Source</string>
    <string name="theme_based">Set by Theme</string>
    <string name="pref_category_theme">Style</string>
    <string name="hide_apps">Hidden App Shortcuts</string>
    <string name="title_search_hidden_apps">Find Hidden Shortcuts</string>
    <string name="summary_search_hidden_apps">Show hidden shortcuts in results.</string>
    <string name="search">Search</string>
    <string name="pref_global_search_provider">Search Engine</string>
    <string name="google">Google App</string>
    <string name="searchbar_appearance_title">Style</string>
    <string name="pref_search_bar_radius">Corner Radius</string>
    <string name="pref_integrations">Plugins</string>
    <string name="pref_sesame_show_shortcuts">Show in Shortcut Bubbles</string>
    <string name="title_show_google_app">Show %1$s Feed</string>
    <string name="feed_theme_pref_title">Background Color</string>
    <string name="action_none">Do Nothing</string>
    <string name="action_sleep">Sleep</string>
    <string name="action_sleep_timeout">Sleep Using Screen Timeout</string>
    <string name="action_open_settings">Open Kiosk Settings</string>
    <string name="action_open_notifications">Open Notification Panel</string>
    <string name="action_overlay">Open Google Feed</string>
    <string name="action_open_app">Open App</string>
    <string name="homescreen">Desktop Layout</string>
    <string name="custom">Custom</string>
    <string name="search_breadcrumb_connector" translatable="false">
        <xliff:g name="first_item">%1$s</xliff:g> >
        <xliff:g name="second_item">%2$s</xliff:g>
    </string>
    <string name="advanced_settings">More Settings</string>
    <string name="adaptive_icon">Adaptive Icon</string>
    <string name="icon_pack">Icon Pack</string>
    <string name="title_disable_suggestions_prompt">Disable App Suggestions</string>
    <string name="msg_disable_suggestions_prompt">"Usage data will be deleted."</string>
    <string name="label_turn_off_suggestions">Disable</string>
    <string name="hide_app">Hide Shortcut</string>
    <string name="icon_shape_rounded_square">Rounded Square</string>
    <string name="hide_app_selected">“&#160;” hidden.</string>
    <string name="loading">Loading…</string>
    <string name="failed">Something went wrong.</string>
    <string name="developer_options_enabled">Developer Options enabled.</string>
    <string name="restart_Kiosk_pref_summary">Reapply settings.</string>
    <string name="show_debug_info_pref_title">Show Component Names</string>
    <string name="debug_component_name">Component Name</string>
    <string name="debug_component_name_copied">Copied to clipboard.</string>
    <string name="add_settings_shortcut_title">Add Shortcut to Desktop</string>
    <string name="low_performance_mode_pref_title">Low Performance Mode</string>
    <string name="action_preferences">@string/customize</string>
    <string name="title_storage_permission_required">Storage Access Needed</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="pref_category_layout">Layout</string>
    <string name="debug_crash_launcher">Force Stop</string>
    <string name="action_last_task">Launch Last Used App</string>
    <string name="action_open_widgets">Open Widget Drawer</string>
    <string name="action_open_overview">Show Desktop Bubble</string>
    <string name="action_app_search">Launch App Search</string>
    <string name="action_close_notifications">Close Notification Panel</string>
    <string name="action_open_app_with_target">Open “%s”</string>
    <string name="error_no_browser">No browser found.</string>
    <string name="icon_pack_external_picker">Open External Picker</string>
    <string name="reset">Reset</string>
    <string name="theme_default">Default</string>
    <string name="icon_pack_applied_toast">“%s” applied.</string>
    <string name="dt2s_admin_hint">To use Double Tap to Sleep, grant the Admin permission.</string>
    <string name="dt2s_admin_warning">Double Tap to Sleep will be disabled.</string>
    <string name="color_presets">Presets</string>
    <string name="automatic_short">Auto</string>
    <string name="recent_task_option_force_stop">Force Stop</string>
    <string name="drag_to_enable_packs">Drag Up to Enable</string>
    <string name="drag_to_disable_packs">Drag Down to Disable</string>
    <string name="enabled_icon_packs">Applied</string>
    <string name="Kiosk_actions">Actions</string>
    <string name="bridge_missing_title">Get Lawnfeed</string>
    <string name="bridge_missing_message">To use Google Feed, get Lawnfeed.</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_dark_theme_mode">Dark theme</string>
    <string name="theme_dark_dark_text">Dark w/ Dark Text</string>
    <string name="theme_black">Black</string>
    <string name="theme_black_dark_text">Black w/ Dark Text</string>
    <string name="theme_dark_theme_mode_follow_wallpaper">@string/theme_auto</string>
    <string name="theme_dark_theme_mode_follow_system">@string/theme_auto_night_mode</string>
    <string name="recent_task_option_popup_window">Dialog</string>
    <string name="drawer_tabs">Tabs</string>
    <string name="undo">Undo</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="sesame_shortcut_disabled">Sesame is disabled.</string>
    <string name="font_variant_italic">Italic</string>
    <string name="font_weight_thin">Thin</string>
    <string name="font_weight_extra_light">Extralight</string>
    <string name="font_weight_light">Light</string>
    <string name="font_weight_regular">Regular</string>
    <string name="font_weight_medium">Medium</string>
    <string name="font_weight_semi_bold">Semibold</string>
    <string name="font_weight_bold">Bold</string>
    <string name="font_weight_extra_bold">Extrabold</string>
    <string name="font_weight_extra_black">Black</string>
    <string name="pref_fonts_global_font">Global Font</string>
    <string name="pref_fonts_change_global_font">Change</string>
    <string name="customnavbar">Custom Navigation Bar</string>
    <string name="customnavbar_back_hiding_desc">Hide the Back button when not needed.</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="feedback_amp_suggestions">Feedback &amp; suggestions</string>
    <string name="quick_survey">Quick survey</string>
    <string name="bug_report">Bug report</string>
    <string name="visit">Visit</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="app_info">App info</string>
    <string name="check_for_update">Check for update</string>
    <string name="developer_contact">Developer contact</string>
    <string name="terms_amp_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_crash">App Crash</string>
    <string name="app_crash_subheading">Sorry for the inconvenience we will fix this issue soon</string>
    <string name="exit">Exit</string>
    <string name="plugins">Plugins</string>
</resources>