<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <group>
        <item
            android:title="@string/feedback_amp_suggestions"
            android:id="@+id/feedback"
            app:showAsAction="never" />
        <item
            android:title="@string/quick_survey"
            android:id="@+id/survey"
            app:showAsAction="never" />
        <item
            android:title="@string/bug_report"
            android:id="@+id/bug"
            app:showAsAction="never" />
        <item
            android:title="@string/visit"
            android:id="@+id/visit"
            app:showAsAction="never" />

    </group>

    <group>

        <item
            android:title="@string/rate"
            android:id="@+id/rate"
            app:showAsAction="never" />
        <item
            android:title="@string/share"
            android:id="@+id/share"
            app:showAsAction="never" />


    </group>

    <group >
        <item
            android:title="@string/app_info"
            android:visible="false"
            android:id="@+id/appinfo"
            app:showAsAction="never" />
        <item
            android:title="@string/check_for_update"
            android:id="@+id/update"
            android:visible="false"
            app:showAsAction="never" />

    </group>


    <group>
        <item
            android:title="@string/developer_contact"
            android:id="@+id/developerContact"
            app:showAsAction="never" />

    </group>
    <group>
        <item
            android:title="@string/terms_amp_conditions"
            android:id="@+id/termsAndCondition"
            app:showAsAction="never" />
        <item
            android:title="@string/privacy_policy"
            android:id="@+id/privacyPolicy"
            app:showAsAction="never" />
    </group>


</menu>