<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This file is part of Lawnchair Launcher.
  ~
  ~     Lawnchair Launcher is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Lawnchair Launcher is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <tech.DevAsh.Launcher.preferences.StyledPreferenceCategory
        android:title="@string/google">

        <tech.DevAsh.Launcher.preferences.StyledSwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_enable_minus_one"
            android:title="@string/title_show_google_app"
            app:controllerClass=".MinusOneController"/>

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/feedThemes"
            android:entryValues="@array/feedThemeValues"
            android:key="pref_feedTheme"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/feed_theme_pref_title"
            android:dependency="pref_enable_minus_one"
            app:controllerClass=".GFeedBackgroundController"/>
    </tech.DevAsh.Launcher.preferences.StyledPreferenceCategory>

    <tech.DevAsh.Launcher.preferences.StyledPreferenceCategory
        android:title="@string/customnavbar"
        app:controllerClass=".CustomNavBarIntegrationController">

        <tech.DevAsh.Launcher.customnavbar.preferences.CustomNavBarIntegrationPreference
            android:key="cnb_integration"
            android:title="@string/customnavbar_back_hiding_desc" />
    </tech.DevAsh.Launcher.preferences.StyledPreferenceCategory>

</androidx.preference.PreferenceScreen>
