<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/bug"
                android:layout_height="300dp"/>

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/app_crash"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:lineHeight="20dp"
                android:text="@string/app_crash_subheading"
                android:layout_height="match_parent"/>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_alignParentRight="true"
                app:cardCornerRadius="20dp"
                android:layout_marginVertical="12dp"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/exit"
                    android:id="@+id/exit"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@color/buttonColor"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>