<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="59dp"
            android:id="@+id/mainContent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/appBar"
                android:layout_height="65dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="@color/colorPrimary"
                    android:layout_height="match_parent">


                    <ImageView
                        android:layout_width="50dp"
                        android:padding="12dp"
                        android:layout_marginLeft="15dp"
                        app:srcCompat="@drawable/back"
                        android:id="@+id/back"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:textSize="20dp"
                        android:textAllCaps="true"
                        android:id="@+id/heading"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:clickable="false"
                        android:focusable="false"
                        android:text="@string/plugins"
                        android:layout_height="match_parent"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/appBar"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pluginsContainer"
                    android:nestedScrollingEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="60dp"
            app:cardElevation="10dp"
            android:background="?android:attr/windowBackground"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100"
                android:translationZ="200dp"
                app:elevation="200dp"
                android:elevation="200dp"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:orientation="vertical"
                    android:translationZ="200dp"
                    app:elevation="200dp"
                    android:elevation="200dp"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/cancel"
                            android:gravity="center"
                            android:id="@+id/cancel"
                            android:textStyle="bold"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_height="match_parent"/>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_height="match_parent">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_marginHorizontal="30dp"
                        app:cardCornerRadius="20dp"
                        android:layout_marginVertical="12dp"
                        android:layout_height="40dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/done"
                            android:id="@+id/done"
                            android:gravity="center"
                            android:background="@color/buttonColor"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            android:layout_height="match_parent"/>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>



</RelativeLayout>
